# qucs

qucs-core/src/: module.cpp
qucs-core/src/components/: CMakeLists.txt  Makefile.am  capq.cpp  capq.h  coil.cpp  coil.h  component_id.h  components.h  indq.cpp  indq.h
qucs-core/src/components/microstrip/: CMakeLists.txt  Makefile.am  circularloop.cpp  circularloop.h  hexagonalinductor.cpp  hexagonalinductor.h  mimcap.cpp  mimcap.h  octogonalinductor.cpp  octogonalinductor.h  spiralinductor.cpp  spiralinductor.h  squareinductor.cpp  squareinductor.h
qucs-doc/technical/: capq.eps  indq.eps  lineardevices.tex
qucs/examples/: Makefile.am
qucs/qucs/: main.cpp  main.h  module.cpp  mouseactions.cpp  qucs.cpp  qucs.h  qucs.qrc  qucs_actions.cpp  qucs_init.cpp  schematic.h  schematic_file.cpp  viewpainter.cpp  wirelabel.cpp
qucs/qucs-lib/: libcomp.h  main.cpp  qucslib.cpp  qucslib_common.h  symbolwidget.cpp  symbolwidget.h
qucs/qucs/bitmaps/: CMakeLists.txt
qucs/qucs/components/: CMakeLists.txt  Makefile.am  capq.cpp  capq.h  circularloop.cpp  circularloop.h  coil.cpp  coil.h  components.h  hexagonalinductor.cpp  hexagonalinductor.h  indq.cpp  mimcap.cpp  mimcap.h  octogonalinductor.cpp  octogonalinductor.h  spiralinductor.cpp  spiralinductor.h  squareinductor.cpp  squareinductor.h
qucs/qucs/diagrams/: CMakeLists.txt  Makefile.am  diagram.cpp  diagram.h  diagramdialog.cpp  diagramdialog.h  graph.cpp  marker.cpp  marker.h
qucs/qucs/dialogs/: CMakeLists.txt  Makefile.am  qucssettingsdialog.cpp  qucssettingsdialog.h
